part 2 add development function LSI on lyric search

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -29,19 +29,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alt-rock' 'latin' 'country' 'classical' 'hip-hop' 'edm' 'heavy-metal']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>spotify_id</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2QjOHCTQ1Jl3zawyYOpxh6</td>\n",
+       "      <td>Sweater Weather</td>\n",
+       "      <td>The Neighbourhood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2K7xn816oNHJZ0aVqdQsha</td>\n",
+       "      <td>Softcore</td>\n",
+       "      <td>The Neighbourhood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5E30LdtzQTGqRvNd7l6kG5</td>\n",
+       "      <td>Daddy Issues</td>\n",
+       "      <td>The Neighbourhood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2iUmqdfGZcHIhS3b9E9EWq</td>\n",
+       "      <td>Everybody Talks</td>\n",
+       "      <td>Neon Trees</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7zwn1eykZtZ5LODrf7c0tS</td>\n",
+       "      <td>You Get Me So High</td>\n",
+       "      <td>The Neighbourhood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7045</th>\n",
+       "      <td>1XgpK29CGGjZnxPYkiRbh4</td>\n",
+       "      <td>Hey DJ</td>\n",
+       "      <td>CNCO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7046</th>\n",
+       "      <td>5q2MjTDby29ZOEigCVV28a</td>\n",
+       "      <td>In My Hood</td>\n",
+       "      <td>South Park Mexican</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7047</th>\n",
+       "      <td>0XpMTExp5q4nLZZZ3msDGn</td>\n",
+       "      <td>La Funka</td>\n",
+       "      <td>Ozuna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7048</th>\n",
+       "      <td>0ulsRBiciReng91DhfVT9D</td>\n",
+       "      <td>Bebé</td>\n",
+       "      <td>Ozuna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7049</th>\n",
+       "      <td>4zK05ecddIq3vfd08Aqi8y</td>\n",
+       "      <td>La Vida Es Así</td>\n",
+       "      <td>Ivy Queen</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7050 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  spotify_id          track_name         artist_name\n",
+       "0     2QjOHCTQ1Jl3zawyYOpxh6     Sweater Weather   The Neighbourhood\n",
+       "1     2K7xn816oNHJZ0aVqdQsha            Softcore   The Neighbourhood\n",
+       "2     5E30LdtzQTGqRvNd7l6kG5        Daddy Issues   The Neighbourhood\n",
+       "3     2iUmqdfGZcHIhS3b9E9EWq     Everybody Talks          Neon Trees\n",
+       "4     7zwn1eykZtZ5LODrf7c0tS  You Get Me So High   The Neighbourhood\n",
+       "...                      ...                 ...                 ...\n",
+       "7045  1XgpK29CGGjZnxPYkiRbh4              Hey DJ                CNCO\n",
+       "7046  5q2MjTDby29ZOEigCVV28a          In My Hood  South Park Mexican\n",
+       "7047  0XpMTExp5q4nLZZZ3msDGn            La Funka               Ozuna\n",
+       "7048  0ulsRBiciReng91DhfVT9D                Bebé               Ozuna\n",
+       "7049  4zK05ecddIq3vfd08Aqi8y      La Vida Es Así           Ivy Queen\n",
+       "\n",
+       "[7050 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "track_df = pd.read_csv(practice_data_path)\n",
+    "print(track_df.genre.unique())\n",
     "rel_columns = ['track_id', 'track_name_x', 'artist_name_x']\n",
     "track_df = track_df[rel_columns]\n",
     "track_df.rename(columns={'track_id': 'spotify_id',\n",
     "                        'track_name_x': 'track_name',\n",
     "                        'artist_name_x': 'artist_name'\n",
     "})\n",
-    "#track_df.sample(30, random_state=15)\n",
-    "None"
+    "#track_df.sample(30, random_state=15)\n"
    ]
   },
   {
@@ -78,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +215,7 @@
     "num_concepts = 100\n",
     "# step 1 import old lyrical data into a dataframe.\n",
     "lyric_df = pd.read_csv(practice_data_path)\n",
+    "lyric_df = lyric_df[lyric_df['genre'] != 'latin']\n",
     "lyric_df = lyric_df[['track_name_x', 'artist_name_x', 'track_id','lyric_raw']]\n",
     "lyric_df.rename(columns={\n",
     "    'track_name_x': 'track_name',\n",
@@ -107,28 +235,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Expected 2D array, got scalar array instead:\narray=TfidfVectorizer(min_df=10, tokenizer=<method 'split' of 'str' objects>).\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/6r/kwmwk0wx4yj2ccxtwqdqgb4r0000gn/T/ipykernel_692/166112137.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlsiObj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTruncatedSVD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_components\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_concepts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdocVecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlsiObj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvecObj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/sklearn/decomposition/_truncated_svd.py\u001b[0m in \u001b[0;36mfit_transform\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m    190\u001b[0m             \u001b[0mReduced\u001b[0m \u001b[0mversion\u001b[0m \u001b[0mof\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mThis\u001b[0m \u001b[0mwill\u001b[0m \u001b[0malways\u001b[0m \u001b[0mbe\u001b[0m \u001b[0ma\u001b[0m \u001b[0mdense\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m         \"\"\"\n\u001b[0;32m--> 192\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"csr\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"csc\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mensure_min_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m         \u001b[0mrandom_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_random_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/sklearn/base.py\u001b[0m in \u001b[0;36m_validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    564\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Validation should be done on X, y or both.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    565\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mno_val_X\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mno_val_y\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 566\u001b[0;31m             \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mcheck_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    567\u001b[0m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    568\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mno_val_X\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mno_val_y\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator)\u001b[0m\n\u001b[1;32m    759\u001b[0m             \u001b[0;31m# If input is scalar raise error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    760\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 761\u001b[0;31m                 raise ValueError(\n\u001b[0m\u001b[1;32m    762\u001b[0m                     \u001b[0;34m\"Expected 2D array, got scalar array instead:\\narray={}.\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    763\u001b[0m                     \u001b[0;34m\"Reshape your data either using array.reshape(-1, 1) if \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Expected 2D array, got scalar array instead:\narray=TfidfVectorizer(min_df=10, tokenizer=<method 'split' of 'str' objects>).\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lsiObj = TruncatedSVD(n_components=num_concepts, random_state=42)\n",
     "docVecs = lsiObj.fit_transform(docTermMat)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# part 2 convert the query into a vector in the concept space\n",
+    "user_query = 'Jealousy, turning saints into the sea Swimming through sick lullabies Choking on your alibis'\n",
+    "# vectorize\n",
+    "userVec = vecObj.transform([user_query])\n",
+    "# convert query vec into the concept space\n",
+    "userLsi = lsiObj.transform(userVec)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7.11647273e-02, -6.09642547e-03,  6.04691377e-02,\n",
+       "        -1.44803986e-03, -3.18537253e-02,  3.90851881e-03,\n",
+       "         1.48029911e-03, -1.69040866e-02, -4.14844889e-02,\n",
+       "        -3.59045550e-03, -1.83534099e-02,  3.13040211e-02,\n",
+       "         4.44765655e-02, -1.43040740e-03, -2.23788814e-02,\n",
+       "         4.93484762e-02,  6.49732182e-03, -2.16652048e-02,\n",
+       "        -1.75695539e-02,  3.98033689e-02,  5.34023243e-02,\n",
+       "         3.41196114e-02, -5.59653883e-03,  2.79872286e-03,\n",
+       "        -2.71257728e-02,  2.35466887e-02,  1.96964389e-02,\n",
+       "        -1.10194644e-03,  1.08624196e-02, -5.95757807e-03,\n",
+       "         7.19548376e-04, -8.06209195e-04,  2.35384462e-02,\n",
+       "         3.26576890e-02, -8.88940659e-05,  5.37283415e-03,\n",
+       "        -2.23354021e-04,  5.07858378e-03,  5.04188369e-03,\n",
+       "        -2.38474616e-02,  1.18862912e-02, -2.08163744e-02,\n",
+       "         1.40020875e-02,  2.29551317e-02,  4.86153201e-03,\n",
+       "        -2.07103041e-02, -6.93358791e-03, -2.34872681e-02,\n",
+       "         7.75909846e-03,  2.45840012e-02, -7.40716399e-04,\n",
+       "        -1.09194129e-02,  1.37269827e-02, -8.31138959e-03,\n",
+       "         1.22304880e-05,  8.62623279e-03, -5.53542153e-03,\n",
+       "         1.67409976e-02,  4.01561626e-02,  1.73007651e-02,\n",
+       "         1.49449231e-02, -1.76552833e-02,  1.10984647e-02,\n",
+       "         1.51134301e-03, -2.46866563e-03,  1.84101727e-02,\n",
+       "        -2.25915896e-02,  5.67146035e-03, -1.08522478e-02,\n",
+       "         7.56263859e-03, -1.74545506e-02,  8.43365315e-03,\n",
+       "         6.50424037e-04,  3.36893747e-03, -1.21156687e-02,\n",
+       "        -1.43502920e-02, -1.69098450e-02,  2.02883306e-02,\n",
+       "         5.98730774e-03, -2.58609033e-02,  2.97953905e-03,\n",
+       "         1.89031859e-02,  5.14271416e-03,  5.94927136e-03,\n",
+       "        -7.87153042e-03,  1.15061494e-03,  4.68736180e-03,\n",
+       "        -8.91184382e-03,  2.37003552e-02,  3.98765205e-03,\n",
+       "        -5.96594037e-04, -1.74753218e-03, -6.31075477e-03,\n",
+       "        -1.16998198e-02, -1.66787217e-02, -1.78266721e-02,\n",
+       "        -1.72970206e-02,  5.43999114e-03,  2.48075878e-02,\n",
+       "        -2.23530372e-02]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
